@startuml

    namespace ua.khpi.oop.malokhvii05.common.eventbus.dispatch {

        class PrioritizedDispatcher {
            ~PrioritizedDispatcher(Dispatcher, Comparator<Subscriber>)
            +dispatch(Object, Iterator<Subscriber>): void
        }

        enum ua.khpi.oop.malokhvii05.common.eventbus.dispatch.PrioritizedDispatcher.Order {
            {static} +ASCENDING
            {static} +DESCENDING
            -Order()
        }

        class PerThreadQueuedDispatcher {
            -dispatching: ThreadLocal<Boolean>
            -queue: ThreadLocal<Queue<PerThreadQueuedDispatcher.Event>>
            ~PerThreadQueuedDispatcher()
            +dispatch(Object, Iterator<Subscriber>): void
        }

        class ua.khpi.oop.malokhvii05.common.eventbus.dispatch.PerThreadQueuedDispatcher.Event {
            -event: Object
            -subscribers: Iterator<Subscriber>
            -Event(Object, Iterator<Subscriber>)
        }

        class ImmediateDispatcher {
            {static} ~INSTANCE: ImmediateDispatcher
            -ImmediateDispatcher()
            +dispatch(Object, Iterator<Subscriber>): void
        }

        class Dispatchers {
            -Dispatchers()
            {static} +newAsynchronousDispatcher(): Dispatcher
            {static} +newImmediateDispatcher(): Dispatcher
            {static} +newPerThreadQueuedDispatcher(): Dispatcher
            {static} +newPrioritizedDispatcher(Dispatcher, Comparator<Subscriber>): Dispatcher
        }

        interface Dispatcher {
            {abstract} +dispatch(Object, Iterator<Subscriber>): void
        }

        class AsynchronousDispatcher {
            -queue: ConcurrentLinkedQueue<AsynchronousDispatcher.EventWithSubscriber>
            ~AsynchronousDispatcher()
            +dispatch(Object, Iterator<Subscriber>): void
        }

        class ua.khpi.oop.malokhvii05.common.eventbus.dispatch.AsynchronousDispatcher.EventWithSubscriber {
            -event: Object
            -subscriber: Subscriber
            -EventWithSubscriber(Object, Subscriber)
        }

        abstract class AbstractDispatcherDecorator {
            #AbstractDispatcherDecorator(Dispatcher)
        }

        AbstractDispatcherDecorator <|-- PrioritizedDispatcher

        interface java.util.Comparator<T> {
            {abstract} +compare(T, T): int
        }
        java.util.Comparator <|.. ua.khpi.oop.malokhvii05.common.eventbus.dispatch.PrioritizedDispatcher.Order

        PrioritizedDispatcher +-- ua.khpi.oop.malokhvii05.common.eventbus.dispatch.PrioritizedDispatcher.Order

        Dispatcher <|.. PerThreadQueuedDispatcher

        PerThreadQueuedDispatcher +-- ua.khpi.oop.malokhvii05.common.eventbus.dispatch.PerThreadQueuedDispatcher.Event

        Dispatcher <|.. ImmediateDispatcher

        Dispatcher <|.. AsynchronousDispatcher

        AsynchronousDispatcher +-- ua.khpi.oop.malokhvii05.common.eventbus.dispatch.AsynchronousDispatcher.EventWithSubscriber

        Dispatcher <|.. AbstractDispatcherDecorator

        PrioritizedDispatcher --> java.util.Comparator: comparator

        AbstractDispatcherDecorator --> Dispatcher: dispatcher

    }

@enduml
